--- a/node/koa2/package.json
+++ b/node/koa2/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.2.0",
-    "nunjucks": "^3.0.0",
+    "koa-static": "^3.0.0",
+    "nunjucks": "^3.0.0"
   }
 }
