--- a/node/db/package.json
+++ b/node/db/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "koa2",
+  "name": "db",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "db.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.2.0",
-    "koa-router": "^7.1.1",
-    "koa-static": "^3.0.0",
-    "nunjucks": "^3.0.0"
+    "mysql": "^2.13.0",
+    "node-uuid": "^1.4.8",
+    "sequelize": "^3.30.4"
   }
 }
